# alphasign-deploy

./: .gitignore  README.md  docker-compose.yml  requirements.txt
backend/: .env 2.example  .env.example  adapter.py  agent_config.yaml.example  alphasign_conversation.txt  alphasign_protocol.jsonl  main.py  pyproject.toml  requirements.txt  start_agent.py  verify_setup_gui.py  verify_setup_terminal.py
backend/agents/executive/: agent.py  agent_executive.py
backend/agents/latent_state/: agent.py  agent_latent_state.py  opinion.py
backend/agents/narrative_analyst/: README.md  agent.py  agent_narrative_analyst.py  agent_old.py  agent_old_2.py  news_fetch.py  prompts.py  sentiment.py  source_reliability.py  synthesis.py
backend/agents/signal_processing/: agent.py  agent_signal_processing.py  opinion.py
backend/scripts/: test_connections.py  verify_narrative_band_connection.py
backend/shared/: config.py  schemas.py
backend/tests/: test_signal_tool_control.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/api/alphasign/[...path]/: route.ts
frontend/src/components/: app-shell.tsx  ticker-command.tsx
frontend/src/hooks/: use-analysis-session.ts
frontend/src/lib/: adapter-url.ts  api.ts
