[project]
name = "alphasign-backend"
version = "0.1.0"
description = "AlphaSign multi-agent risk intelligence platform — backend agents"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "fredapi",
    "langchain",
    "langchain-google-genai",
    "langchain-openai",
    "langgraph",
    "numpy",
    "pandas",
    "scipy",
    "yfinance",
    "pykalman",
    "thenvoi-sdk",
    "fastapi",
    "uvicorn[standard]",
]

# Add the Band SDK with whatever adapter extra fits your agent's LLM client.
# For agents calling Featherless/AI-ML API directly via the openai client,
# the "pydantic-ai" or generic adapter is usually the right starting point —
# check docs.band.ai/integrations/sdks/overview for the current adapter list.
#
#   uv add "band-sdk[pydantic-ai]"
#
